Add excludefile path

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,5 +3,6 @@
 	email = kitagawa@timedia.co.jp
 [core]
 	excludesfile = /Users/syunta/.gitignore_global
+	excludesfile = /Users/kitagawa/.gitignore_global
 [alias]
   lg = log --graph --decorate --pretty=oneline --abbrev-commit
