--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,5 @@
 	excludesfile = ~/.gitignore_global
 [alias]
   lg = log --graph --decorate --pretty=oneline --abbrev-commit
+[rerere]
+	enabled = true
