--- a/.gitconfig
+++ b/.gitconfig
@@ -5,5 +5,6 @@
 	excludesfile = ~/.gitignore_global
 [alias]
   lg = log --graph --decorate --pretty=oneline --abbrev-commit
+  dcommit = svn dcommit --rmdir
 [rerere]
 	enabled = true
