tmux.conf - Replace old vi-keybind-setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,11 +19,7 @@ bind -r K resize-pane -U 1
 bind -r L resize-pane -R 1
 
 # copy mode
-set-window-option -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+setw -g mode-keys vi
 
 # status bar
 set -g status-fg yellow
