--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# link reattach-to-user-namespace
+set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
+
 # escape
 set -sg escape-time 1
 
@@ -20,6 +23,9 @@ bind -r L resize-pane -R 1
 
 # copy mode
 setw -g mode-keys vi
+bind-key   -T copy-mode-vi v     send-keys -X begin-selection
+bind-key   -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key   -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # status bar
 set -g status-fg yellow
