--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,11 +30,11 @@ bind-key   -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-
 # status bar
 set -g status-fg yellow
 set -g status-bg black
-setw -g window-status-fg cyan
-setw -g window-status-current-fg green
+setw -g window-status-style fg="cyan"
+setw -g window-status-current-style fg="green"
 set -g status-right "#[fg=white][%Y-%m-%d %H:%M]"
 set -g status-position top
 
 # pane border
-set-option -g pane-border-fg black
-set-option -g pane-active-border-fg brightgreen
+set-option -g pane-border-style fg="black"
+set-option -g pane-active-border-style fg="brightgreen"
