--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # link reattach-to-user-namespace
-set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"
+set-option -g default-command "exec reattach-to-user-namespace $SHELL"
 
 # escape
 set -sg escape-time 1
